--- a/day20/css/style.css
+++ b/day20/css/style.css
@@ -143,6 +143,144 @@ section.main .img-box {
 }
 section.main .img-box img{width: 100%;}
 
+/*섹션 :intro*/
+section.intro{
+    min-height: 700px;
+    background-color: #eee;
+    text-align: center;
+    padding: 100px 0;
+}
+
+/*섹션:recommend*/
+section.recommend{
+    text-align: center;
+    padding: 120px 0;
+
+}
+section.recommend .slide-box{
+    width: 1440px;
+    margin: 100px auto;
+}
+section.recommend .slide-box ul{
+    display: flex;
+}
+section.recommend .slide-box ul li{
+    position: relative;
+    width: calc(100%/3);
+}
+section.recommend .slide-box ul li .label{
+    padding: 16px 28px;
+    background-color: var(--sub);
+    border-radius: 30px;
+    color: white;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 160px;
+
+}
+section.recommend .slide-box ul li .content-box{
+    margin-top: 50px;
+    padding: 20px 10px;
+    box-sizing: border-box;
+
+}
+section.recommend .slide-box ul li .content-box p{font-size: 20px;}
+
+
+/*섹션:about*/
+section.about{
+    min-height: 1800px;
+    padding: 120px 0;
+    box-sizing: border-box;
+}
+
+section.about .inner{
+    width: 100%;
+    min-width: 1320px;
+    padding: 20px;
+    margin:0 auto;
+    box-sizing: border-box;
+    position: relative;
+    
+}
+
+section.about .inner .about-list{position: relative;}
+section.about .inner .about-list .img-box{
+    position: absolute;
+    top: 0;
+    right: 30px;
+    width: 300px;
+    height: 300px;
+    z-index: 1;
+}
+section.about .inner .about-list .card-box{
+    width: calc(50% -40px);
+    background-color: var(--bg-light);
+    /*background-size: 100%;*/
+    max-width: 600px;
+    height: 600px;
+    padding: 50px 50px 0 50px;
+    border-radius: 50px;
+    position: relative;
+    margin-top: 80px;
+}
+section.about .inner .about-list .card-box.left{
+    float: left;
+}
+section.about .inner .about-list .card-box.right{
+    float: right;
+    top: 120px;
+}
+
+section.about .inner .about-list .card-box.box1{
+    background: url(../img/img_about_bg01.png) bottom center/100% no-repeat;
+    background-color: var(--bg-light);
+}
+section.about .inner .about-list .card-box.box2{
+    background: url(../img/img_about_bg02.png)bottom center/100% no-repeat;
+    background-color: var(--bg-light);
+}
+section.about .inner .about-list .card-box.box3{
+    background: url(../img/img_about_bg03.png)bottom center/100% no-repeat;
+    background-color: var(--bg-light);
+}
+section.about .inner .about-list .card-box.box4{
+    background: url(../img/img_about_bg04.png)bottom center/100% no-repeat;
+    background-color: var(--bg-light);
+}
+
+section.about .about-title {
+    font-size: 36px;
+  line-height: 40px;
+}
+section.about .about-info{
+    font-size: 20px;
+    margin-bottom: 20px;
+    color: var(--main);
+}
+.btn-more{
+    display: block;
+    width: 38px;
+    height: 38px;
+    line-height: 25px;
+    padding: 10px;
+    background-color: black;
+    color: var(--white);
+    font-size: 30px;
+    box-sizing: border-box;
+    border-radius: 50%;
+    position: absolute;
+    top: 50px;
+    right: 50px;
+}
+
+
+
+
+
+
+
 /*반응형*/
 .pc{display: block !important;}
 .pc-flex{display: flex !important;}
@@ -150,5 +288,8 @@ section.main .img-box img{width: 100%;}
 
 /*600px이하 모바일*/
 @media screen and(max-width:600px) {
+    .pc { display: none !important; }
+    .pc-flex { display: none !important; }
+    .mobile { display: block !important; }
     
 }
